# glEnv

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
glEnv/: camera.hpp  geometry.hpp  lighting.hpp  linalg.hpp  primitives.hpp  shader.hpp  utils.hpp
